src/test/deca/context/invalid/class8.deca
class A{
    boolean a;
    boolean b;
}

{
    A FIRST=new A();
    FIRST.a=true;
    FIRST.b=54;
}